@@ -1,5 +1,4 @@
-// -*- mode: C++; c-indent-level: 4; c-basic-offset: 4; tab-width: 8 -*-
-//
+
 // Vector.h: Rcpp R/C++ interface class library -- vectors
 //
 // Copyright (C) 2010 - 2013 Dirk Eddelbuettel and Romain Francois
