@@ -1,7 +1,15 @@
+2024-06-02  Dirk Eddelbuettel  <edd@debian.org>
+
+	* inst/include/Rcpp/internal/export.h: More R_xlen_t switching
+	* inst/include/Rcpp/vector/SubMatrix.h: Idem
+	* inst/include/Rcpp/vector/Vector.h: Idem
+
 2024-06-01  Dirk Eddelbuettel  <edd@debian.org>
 
 	* inst/include/Rcpp/internal/Proxy_Iterator.h (Proxy_Iterator):
 	Switch to R_xlen_t ('clang++-17 -Wconversion -Wno-sign-conversion')
+	* inst/include/Rcpp/DataFrame.h: Idem
+	* inst/include/Rcpp/Vector.h: Idem
 
 2024-05-28  Dirk Eddelbuettel  <edd@debian.org>
 
